--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 *.java linguist-detectable=false
-*.python linguist-detectable=true
+*.py linguist-detectable=true
