--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
-# Auto detect text files and perform LF normalization
-*.java linguist-detectable=false
 *.py linguist-detectable=true
+*.java linguist-detectable=false
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
